--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,10 @@ h1 {
   cursor: pointer;
 }
 
+
+/*Datepicker overwrite*/
+.react-datepicker-wrapper, .react-datepicker__input-container { display: block !important; } .react-datepicker-wrapper .react-datepicker__input-container input { width: 100% }
+
 /*Small devices */
 @media (min-width: 576px) {
 }
