--- a/client/src/components/common/GoalList.css
+++ b/client/src/components/common/GoalList.css
@@ -1,33 +1,11 @@
-.statusBlock {
-  color: #fff;
-  border-radius: 15px;
-  height: 20px;
-  padding: 1px 5px;
-  font-size: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-}
-
-.notstarted {
-  background-color: #dc3545;
-  border: 1px solid #dc3545;
-}
-
-.inprogress {
-  background-color: #dcaa14;
-  border: 1px solid #ffc107;
-}
-
-.completed {
-  background-color: #28a745;
-  border: 1px solid #28a745;
-}
-
 .goalOps {
   display:flex;
   justify-content: space-evenly;
+}
+
+.goal-container:hover {
+  background: #f3f3f3;
+  cursor:pointer;
 }
 
 /* Medium devices (tablets, 768px and up)*/
