--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,32 @@ h1 {
   cursor: pointer;
 }
 
+.statusBlock {
+  color: #fff;
+  border-radius: 15px;
+  height: 20px;
+  padding: 1px 5px;
+  font-size: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+}
+
+.notstarted {
+  background-color: #dc3545;
+  border: 1px solid #dc3545;
+}
+
+.inprogress {
+  background-color: #dcaa14;
+  border: 1px solid #ffc107;
+}
+
+.completed {
+  background-color: #28a745;
+  border: 1px solid #28a745;
+}
 
 /*Datepicker overwrite*/
 .react-datepicker-wrapper, .react-datepicker__input-container { display: block !important; } .react-datepicker-wrapper .react-datepicker__input-container input { width: 100% }
